[project]
name = "ComfyUI_KQube"
version = "1.0.0"
description = "Custom nodes for loading and applying KQUBE (.kqube) cubic projection layers onto diffusion models (SDXL, Flux, SD3)"
license = {file = "LICENSE"}
authors = [{name = "keitaizumi"}]
dependencies = ["safetensors>=0.4.0", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/IzumiKeita/ComfyUI_KQube"

[tool.comfy]
PublisherId = "izumikeita"
DisplayName = "ComfyUI-KQube"
Icon = ""
